frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-frontend-svc
  namespace: default
spec:
  selector:
    app: sandbox-frontend-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
